2014-04-21  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/nanorc.nanorc: There is no F0 key.
	* src/global.c (first_sc_for): Adjust two comments -- the help
	viewer no longer sorts keys to be control first, meta second.
	* src/global.c (first_sc_for): Put meta first, for clarity.

2014-04-16  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (get_mouseinput): Properly find also the zeroeth
	item from a certain menu in the list of functions.  Until now
	this accidentally worked, because "Get Help" was the very first
	item in almost all menus.  Partly fixes Savannah bug #42093.
	* src/nano.h: MHELP should not be part of MALL, as ^B and ^F and
	Enter and Backspace and so on don't make any sense there.
	* src/nano.h, src/global.c (shortcut_init): Rename MALL to MMOST,
	to be more accurate.
	* src/nano.h, src/global.c, src/help.c, src/search.c: Rename
	MREPLACE2 to MREPLACEWITH, for clarity.
	* src/nano.h: Adjust some tabbing and spacing.
	* src/global.c (shortcut_init): Make better use of MMOST.

2014-04-15  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (precalc_multicolorinfo): Actually set the intended
	non-blocking mode for keyboard input.
	* src/winio.c: Relocate and correct a few comments.
	* README.SVN: To build nano from svn, ssh is not required.
	* src/*.c: Normalize whitespace around '==' comparison.
	* configure.ac: Check for the availability of snprintf(),
	fixes Savannah bug #42070 reported by David Lawrence Ramsey.
	* src/global.c (shortcut_init), src/help.c (do_help): Add the
	shortcuts M-\ and M-/ for First Line and Last Line to the help
	viewer, instead of ^Y and ^V, which are already taken for Page
	Up and Page Down.  Also, stop them from aborting the viewer.
	* src/help.c (do_help): Remove superfluous abortion variable.
	* src/global.c (shortcut_init), src/help.c (do_help): Add the
	shortcut ^L for Refresh to the help viewer and stop it aborting;
	a changed version of patch #7013 from David Lawrence Ramsey.
